@@ -3,8 +3,11 @@ package com.cookie.domain.director.service;
 import com.cookie.domain.director.dto.response.DirectorDetailResponse;
 import com.cookie.domain.director.entity.Director;
 import com.cookie.domain.director.repository.DirectorRepository;
+import com.cookie.domain.movie.dto.response.MovieSimpleResponse;
 import com.cookie.domain.movie.dto.response.PersonDetailMovieInfo;
 import com.cookie.domain.movie.entity.Movie;
+import com.cookie.domain.movie.repository.MovieLikeRepository;
+import com.cookie.domain.review.repository.ReviewRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -16,6 +19,8 @@ import java.util.stream.Collectors;
 public class DirectorService {
 
     private final DirectorRepository directorRepository;
+    private final ReviewRepository reviewRepository;
+    private final MovieLikeRepository movieLikeRepository;
 
     public DirectorDetailResponse getDirectorDetails(Long directorId) {
         // 1. 감독 정보 가져오기
@@ -26,15 +31,21 @@ public class DirectorService {
         List<Director> movieDirectors = directorRepository.findAllMoviesByDirectorId(directorId);
 
         // 3. ActorMovie 리스트 생성
-        List<PersonDetailMovieInfo> directorMovieList = movieDirectors.stream()
+        // 3. DirectorMovie 리스트 생성
+        List<MovieSimpleResponse> directorMovieList = movieDirectors.stream()
                 .flatMap(movieDirector -> movieDirector.getMovies().stream())
-                .map(movie -> PersonDetailMovieInfo.builder()
-                        .title(movie.getTitle())
-                        .poster(movie.getPoster())
-                        .released(movie.getReleasedAt())
+                .map(movie -> MovieSimpleResponse.builder()
+                        .id(movie.getId()) // Movie ID
+                        .title(movie.getTitle()) // 제목
+                        .poster(movie.getPoster()) // 포스터
+                        .releasedAt(movie.getReleasedAt()) // LocalDateTime -> LocalDate 변환
+                        .country(movie.getCountry().getName()) // 제작 국가 이름
+                        .likes(movieLikeRepository.countByMovieId(movie.getId())) // 좋아요 수
+                        .reviews(reviewRepository.countByMovieId(movie.getId())) // 리뷰 개수
                         .build()
                 )
-                .toList();
+                .collect(Collectors.toList());
+
 
         // 4. PersonDetailMovieInfo 생성 및 반환
         return DirectorDetailResponse.builder()
